# govscout-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE_SOUP  README.md  buildspec.yml  codebuild.dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  scrapy.cfg
.github/workflows/: ci.yml
govscout_crawl/: items.py  middlewares.py  pipelines.py  settings.py
govscout_crawl/spiders/: webs.py
src/: httpext.rs  main.rs  shapes.rs  soup.rs  webs.rs
src/httpext/: awserr.rs  client.rs  cookie_store.rs  form.rs  logconfig.rs  request.rs  response.rs  webs-login-page.html
src/soup/: attribute.rs  find.rs  node_ext.rs  qb_ext.rs
src/webs/: home.rs  login.rs  search_opportunities.rs  webs-home.html  webs-opp-detail1.html  webs-search-bids-page1.html  webs-search-bids-start.html
