[package]
name = "govscout-backend"
version = "0.1.0"
edition = "2021"

[features]
default = ["charset", "http2", "rustls-tls"]

charset = ["reqwest/charset"]
default-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
native-tls-alpn = ["reqwest/native-tls-alpn"]
http2 = ["reqwest/http2"]
hickory-dns = ["reqwest/hickory-dns"]
json = ["reqwest/json"]
multipart = ["reqwest/multipart"]
rustls-tls = ["reqwest/rustls-tls"]
rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
socks = ["reqwest/socks"]

[dependencies]
async-tempfile = "0.5.0"
aws-config = { version = "1.1.10", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.21.0"
aws-sdk-s3 = "1.22.0"
aws-sdk-sqs = "1.21.0"
aws-sdk-ssm = "1.21.0"
aws-smithy-runtime-api = "1.4.0"
aws_lambda_events = "0.15.0"
base64 = "0.22.0"
bytes = "1.6.0"
cookie_store = "0.21.0"
env_logger = "0.11.3"
futures = "0.3.30"
futures-util = "0.3.30"
hex = "0.4.3"
html5ever = "0.27"
http = "1"
lambda_runtime = "0.11.1"
lazy_static = "1.4.0"
log = "0.4.21"
markup5ever_rcdom = "0.3"
md5 = "0.7.0"
reqwest = { version = "0.12.3", features = ["brotli", "cookies", "deflate", "gzip", "stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.8"
tokio = { version = "1.37.0", features = ["macros"] }
tower-service = "0.3.2"
uuid = { version = "1.8.0", features = ["v7"] }

[dev-dependencies]
httpmock = "0.7.0"
test-log = "0.2"
